(fix): Fix horizontal scroll in pipeline detail page

--- a/app/components/build-banner/styles.scss
+++ b/app/components/build-banner/styles.scss
@@ -1,5 +1,5 @@
 & {
-  margin: 10px 25px 0;
+  margin: 10px 15px 0;
 
   .prevnext {
     font-size: 14px;
