--- a/app/components/pipeline-event-view/styles.scss
+++ b/app/components/pipeline-event-view/styles.scss
@@ -31,7 +31,6 @@
 
   .user {
     overflow: hidden;
-    word-wrap: nowrap;
   }
 
   .cause, .created {
