--- a/app/components/pipeline-events-list/styles.scss
+++ b/app/components/pipeline-events-list/styles.scss
@@ -1,5 +1,5 @@
 & {
-  padding: 0 60px 0 25px;
+  padding: 0 60px 0 15px;
   margin-bottom: 2em;
 
   h2 {
