--- a/app/components/pipeline-secret-settings/styles.scss
+++ b/app/components/pipeline-secret-settings/styles.scss
@@ -1,5 +1,5 @@
 & {
-  padding: 10px 25px;
+  padding: 10px 15px;
 }
 
 .info-message {
