--- a/app/components/pipeline-start/styles.scss
+++ b/app/components/pipeline-start/styles.scss
@@ -1,5 +1,5 @@
 & {
-  padding: 20px 0 0 20px;
+  padding: 20px 0 0 10px;
 }
 button {
   border: 1px solid $sd-link;
