--- a/app/components/pipeline-workflow/styles.scss
+++ b/app/components/pipeline-workflow/styles.scss
@@ -1,5 +1,5 @@
 & {
-  padding: 15px 0 15px 15px;
+  padding: 15px 0 15px 5px;
 }
 
 .build-bubble:last-child .dir-arrow {
