--- a/app/components/user-link/styles.scss
+++ b/app/components/user-link/styles.scss
@@ -1,9 +1,10 @@
 & {
   font-weight: 300;
-  line-height: 20px;
   height: 20px;
-  white-space: nowrap;
+  line-height: 20px;
   overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 
   a {
     font-size: 14px;
